--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -53,7 +53,7 @@ Setup Far (II--III) Map Tiles with settlements of same Faction as players Towns 
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
 
-Make AI Card Deck for Settlement defenders.
+Prepare an AI Deck for Settlement defenders.
 
 \textbf{Settlement defenders Deck:} 1×Attack Card, 1×Defence Card, 1×Spell Card
 
