--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -34,7 +34,7 @@ This Scenario is played over 7 Rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling.
 
-\textbf{Map Tile Pool:} Take $P$ × random Far (II–III) map Tiles as shared pool. None of them must contain a settlement. ($P$ stands for the number of players)
+\textbf{Map Tile Pool:} Take $P$ × random Far (II–-III) Map Tiles to form a shared pool, where $P$ equals the number of players. None of these tiles may contain a Settlement.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
