--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -39,7 +39,7 @@ This Scenario is played over 7 Rounds.
 \subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map Tiles and arrange them as shown in the Scenario map layout.
-Setup Far (II--III) Map Tiles with settlements of same Faction as players Towns as show a color Cube, or see example.
+Place Far (II--III) Map Tiles with Settlements that match your Faction's Towns. Mark these with a colored Cube (see example).
 
 \begin{itemize}
   \item $P$ × Starting (I) Map Tile.
