--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -106,7 +106,7 @@ Conquer all Settlements by any player.
     \end{itemize}
   \end{itemize}
 
-\subsection*{\MakeUppercase{Enemy's clans waves}}
+\subsection*{\MakeUppercase{Enemy clan waves}}
 \begin{itemize}
   \item If enemy's settlement is not conquered, then enemy clans armies are attacking your castle!
   \item A battle occurs at the start of each player's turn.
