--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -110,7 +110,7 @@ Conquer all Settlements by any player.
 \begin{itemize}
   \item If enemy's settlement is not conquered, then enemy clans armies are attacking your castle!
   \item A battle occurs at the start of each player's turn.
-  \item Before attack, you can use your building, spell book and population tokens, and use Might and Magic Cards, but you can't move with Hero.
+  \item Before combat, you may use your Building, Spell Book, and Population Tokens, as well as Might and Magic Cards. However, you cannot move your Hero.
   \item Each player has to defend his own castle.
   \item If you have citadel, \textit{Arrow tower} has decreased attack. The attack is for first/second/third wave as 2/3/4\svg{attack}.
   \item The battle does not cost any extra movement points.
