--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -111,7 +111,7 @@ Conquer all Settlements by any player.
   \item If enemy's settlement is not conquered, then enemy clans armies are attacking your castle!
   \item A battle occurs at the start of each player's turn.
   \item Before combat, you may use your Building, Spell Book, and Population Tokens, as well as Might and Magic Cards. However, you cannot move your Hero.
-  \item Each player has to defend his own castle.
+  \item Each player must defend their own Town.
   \item If you have citadel, \textit{Arrow tower} has decreased attack. The attack is for first/second/third wave as 2/3/4\svg{attack}.
   \item The battle does not cost any extra movement points.
   \item The strength of the siege army is determined by the table \textit{Enemy's Clans armies}.
