--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -108,7 +108,7 @@ Conquer all Settlements by any player.
 
 \subsection*{\MakeUppercase{Enemy clan waves}}
 \begin{itemize}
-  \item If enemy's settlement is not conquered, then enemy clans armies are attacking your castle!
+  \item Unconquered enemy Settlements will send clan armies to attack your Town!
   \item A battle occurs at the start of each player's turn.
   \item Before combat, you may use your Building, Spell Book, and Population Tokens, as well as Might and Magic Cards. However, you cannot move your Hero.
   \item Each player must defend their own Town.
