--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -147,7 +147,11 @@ Conquer all Settlements by any player.
     \newcommand{\golden}[0]{\svgunit[12]{golden}}
     \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
-      \begin{tabularx}{\linewidth}{p{0.2\linewidth}XXXX} & \darkcell{\bronze  Easy} & \darkcell{\silver  Normal} & \darkcell{\golden  Hard} & \darkcell{\azure  Impossible}\\
+      \begin{tabularx}{\linewidth}{p{0.2\linewidth}XXXX} &
+      \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
+      \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal} &
+      \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
+      \darkcell{\raisebox{-.2\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
       \darkcell[1.2]{First wave}
         & \lightcell[1.2]{\bronze}
         & \lightcell[1.2]{\bronze \bronze}
