--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -113,7 +113,7 @@ Conquer all Settlements by any player.
   \item Before combat, you may use your Building, Spell Book, and Population Tokens, as well as Might and Magic Cards. However, you cannot move your Hero.
   \item Each player must defend their own Town.
   \item If you have a Citadel, the \textit{Arrow Tower} attack is reduced. The attacks for first/second/third wave become 2/3/4 \svg{attack}.
-  \item The battle does not cost any extra movement points.
+  \item This combat does not cost movement points.
   \item The strength of the siege army is determined by the table \textit{Enemy's Clans armies}.
   \item If your main Hero is present in any of allied town (not settlement) and Clan wave attack your allied town where is no main Hero, you can participate on defending allied castle by using Might and Magic Cards (Simply: you defend your teammate's castle with their Units and your Hero's Cards).
   \item Gain one \svg{experience} when successfully defending your Town, regardless of whether your main Hero participated.
