--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -13,7 +13,7 @@
 
 \textit{``Sound the warhorn! We'll drive them back as always!'' you command, and go to defend the city. Just as you have done many times before. Such is the harsh life of the border clans, where wars and skirmishes with neighboring rivals never truly end. Fortunately, your alliance remains strong, and you know your back is covered.}
 
-\textit{Therefore, the time has come to end the long-standing wars and crush your enemies like a bug once and for all!}
+\textit{The time has come to end these long-standing wars and crush your enemies once and for all!}
 
 \subsection*{\MakeUppercase{Scenario Length}}
 
