--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -121,7 +121,7 @@ Conquer all Settlements by any player.
 
 \subsection*{\MakeUppercase{Settlements defenders}}
 \begin{itemize}
-  \item The strength of the army in Settlement is determined by the table \textit{Enemy's Clans armies} (last row).
+  \item The strength of Settlement Defenders is determined by the \textit{Enemy Clan Armies} table (last row).
   \item After draw an enemy army, Player can discard one enemy Unit Card and draw a new Unit of same Tier.
   \item The battle does not cost any extra movement points.
   \item In this battles, you has to use AI Cards.
