--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -123,7 +123,7 @@ Conquer all Settlements by any player.
 \begin{itemize}
   \item The strength of Settlement Defenders is determined by the \textit{Enemy Clan Armies} table (last row).
   \item After drawing an enemy army, a Player may discard one enemy Unit Card and draw a new Unit of the same Tier.
-  \item The battle does not cost any extra movement points.
+  \item The combat does not cost Movement Points.
   \item In this battles, you has to use AI Cards.
   \item After won battle, you gain one Level.
 \end{itemize}
