--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -140,7 +140,8 @@ Conquer all Settlements by any player.
   \hommtable[]{16}{
     \centering
     \medskip
-    \textbf{Enemy's Clans armies}\\
+    \textbf{Enemy Clan Armies}\\
+    \bigskip
 
     \newcommand{\bronze}[0]{\svgunit[12]{bronze}}
     \newcommand{\silver}[0]{\svgunit[12]{silver}}
