--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -63,8 +63,8 @@ Conquer all Settlements by any player.
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
 \begin{itemize}
-  \item Any player lose his town.
-  \item All settlements are not owned by any player at the end of 7th turn.
+  \item Any player loses their Town.
+  \item At least one Settlement remains unclaimed by the end of the \nth{7} Round. Time has run out! 
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
