--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -58,7 +58,7 @@ Prepare an AI Deck for Settlement defenders.
 \textbf{Settlement defenders Spell Deck:} 1 × Magic Arrow
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-Conquer all Settlements by any player.
+Conquer all Settlements.
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
