--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -70,9 +70,9 @@ Conquer all Settlements.
 \subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
-  \item At any time, Players can spend their Building Token to perform the same actions as if they visited a Trading Post.
-  \item When defending the town, and your Hero is not here, you can still use your Units (for free).
-  \item Each settlement is defend by clans Settlement defenders. (see below)
+  \item Players can spend their Build Token at any time to perform Trading Post actions.
+  \item You can use your Units to defend your Town (without paying 8 \svg{gold}) even if your Hero is not present.
+  \item Each Settlement is defended by Settlement Defenders from local clans (see below).
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
