--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -149,10 +149,10 @@ Conquer all Settlements.
     \newcommand{\azure}[0]{\svgunit[12]{azure}}
 
       \begin{tabularx}{\linewidth}{p{0.2\linewidth}XXXX} &
-      \darkcell{\raisebox{-.2\height}{\svgunit[20]{bronze}} \textbf{Easy}} &
-      \darkcell{\raisebox{-.2\height}{\svgunit[20]{silver}} \textbf{Normal} &
-      \darkcell{\raisebox{-.2\height}{\svgunit[20]{golden}} \textbf{Hard}} &
-      \darkcell{\raisebox{-.2\height}{\svgunit[20]{azure}} \textbf{Impossible}}\\
+      \darkcell{\textbf{Easy}} &
+      \darkcell{\textbf{Normal}} &
+      \darkcell{\textbf{Hard}} &
+      \darkcell{\textbf{Impossible}}\\
       \darkcell[1.2]{First wave}
         & \lightcell[1.2]{\bronze}
         & \lightcell[1.2]{\bronze \bronze}
