--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -21,7 +21,7 @@ This Scenario is played over 7 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 
-\textbf{Player Count:} 1-6
+\textbf{Player Count:} 1--6
 
 \textbf{Starting Resources:} 14 \svg{gold}, 5 \svg{building_materials}, 2 \svg{valuables}
 
