--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -125,7 +125,7 @@ Conquer all Settlements.
   \item After drawing an enemy army, a Player may discard one enemy Unit Card and draw a new Unit of the same Tier.
   \item The combat does not cost Movement Points.
   \item In these combats, you must use AI Cards.
-  \item After won battle, you gain one Level.
+  \item After winning a combat, gain 2 \svg{experience}.
 \end{itemize}
 
 \columnbreak
