Close to enemies - Cr review moving sections

--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -5,7 +5,7 @@
 
 \textbf{Author:} Kelghor
 
-\textbf{Version:} 1.5
+\textbf{Version:} 1.6
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1313651865648369725}{Archon Studio Discord}
 
@@ -13,7 +13,8 @@
 
 \textit{``Sound the warhorn! We'll drive them back as always!'' you command, and go to defend the city. Just as you have done many times before. Such is the harsh life of the border clans, where wars and skirmishes with neighboring rivals never truly end. Fortunately, your alliance remains strong, and you know your back is covered.}
 
-\textit{The time has come to end these long-standing wars and crush your enemies once and for all!}
+\textit{The time has come to end these long-standing wars and crush your enemies like a bug once and for all!}
+% Translator info: In Homam IV was Quote like: "Rufux will crush this army like a bug." If has scounting and has bigger army. So "like a bug" is little easter egg referencing on this.
 
 \subsection*{\MakeUppercase{Scenario Length}}
 
@@ -34,7 +35,7 @@ This Scenario is played over 7 Rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling.
 
-\textbf{Map Tile Pool:} Take $P$ × random Far (II–-III) Map Tiles to form a shared pool, where $P$ equals the number of players. None of these tiles may contain a Settlement.
+\textbf{Map Tile Pool:} Take $P$ × random Far (II–-III) Map Tiles to form a shared pool, where $P$ equals the number of players. None of these Tiles may contain a Settlement.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
@@ -67,6 +68,35 @@ Conquer all Settlements by any player.
   \item All settlements are not owned by any player at the end of 7th turn.
 \end{itemize}
 
+\subsection*{\MakeUppercase{Timed Events}}
+    \textbf{\nth{1} Round:}
+    \begin{itemize}
+      \item At start of the Round, each player show up the \textit{nemesis map Tiles} (Far (II--III) Map Tile with Settlement of same Faction as players Towns). This Tile you can reveal freely.
+    \end{itemize}
+    \textbf{\nth{2} Round:}
+    \begin{itemize}
+      \item  First wave of enemy clan armies attacks the towns. (see below)
+      \item  Each player who defended his own town, during this Round can hire secondary Hero for 5 \svg{gold}, but you still have to use the population token.
+    \end{itemize}
+    \textbf{\nth{3} Round:}
+    \begin{itemize}
+      \item At start of the Round, each player shows up one Tile (Far (II--III) Map Tile. This Tile you can reveal freely. (Not matter if Tile is from pool or map template.)
+    \end{itemize}
+    \textbf{\nth{4} Round:}
+    \begin{itemize}
+      \item Second wave of enemy clan armies attacks the towns. (see below)
+      \item Each player who defended his own town, search (3) the \textit{Artifact Deck}.
+     \end{itemize}
+    \textbf{\nth{6} Round:}
+    \begin{itemize}
+      \item Third wave of enemy clan armies attacks the towns. (see below)
+      \item Each player who defended his own town, search (3) the \textit{Artifact Deck}.
+    \end{itemize}
+    \textbf{\nth{7} Round:}
+    \begin{itemize}
+      \item During this Round, Players can discard and draw Cards at the start of their turn twice rather than once.
+    \end{itemize}
+
 \subsection*{\MakeUppercase{Additional Rules}}
 
 \begin{itemize}
@@ -74,37 +104,6 @@ Conquer all Settlements by any player.
   \item When defending the town, and your Hero is not here, you can still use your Units (for free).
   \item Each settlement is defend by clans Settlement defenders. (see below)
 \end{itemize}
-
-\subsection*{\MakeUppercase{Timed Events}}
-  \begin{itemize}
-   \item \textbf{\nth{1} Round:}
-    \begin{itemize}
-      \item At start of the Round, each player show up the \textit{nemesis map Tiles} (Far (II--III) Map Tile with Settlement of same Faction as players Towns). This Tile you can reveal freely.
-    \end{itemize}
-   \item \textbf{\nth{2} Round:}
-    \begin{itemize}
-      \item  First wave of enemy clan armies attacks the towns. (see below)
-      \item  Each player who defended his own town, during this Round can hire secondary Hero for 5 \svg{gold}, but you still have to use the population token.
-    \end{itemize}
-   \item \textbf{\nth{3} Round:}
-    \begin{itemize}
-      \item At start of the Round, each player shows up one Tile (Far (II--III) Map Tile. This Tile you can reveal freely. (Not matter if Tile is from pool or map template.)
-    \end{itemize}
-   \item \textbf{\nth{4} Round:}
-    \begin{itemize}
-      \item Second wave of enemy clan armies attacks the towns. (see below)
-      \item Each player who defended his own town, search (3) the \textit{Artifact Deck}.
-     \end{itemize}
-   \item \textbf{\nth{6} Round:}
-    \begin{itemize}
-      \item Third wave of enemy clan armies attacks the towns. (see below)
-      \item Each player who defended his own town, search (3) the \textit{Artifact Deck}.
-    \end{itemize}
-   \item \textbf{\nth{7} Round:}
-    \begin{itemize}
-      \item During this Round, Players can discard and draw Cards at the start of their turn twice rather than once.
-    \end{itemize}
-  \end{itemize}
 
 \subsection*{\MakeUppercase{Enemy clan waves}}
 \begin{itemize}
