rename picture balistic -> ballistics - in code

--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Cooperative Scenario}{Close to enemies}{\images/balistic.png}
+\addscenariosection{1}{Cooperative Scenario}{Close to enemies}{\images/ballistics.png}
 
 \begin{multicols}{2}
 
@@ -65,7 +65,7 @@ Conquer all Settlements.
 
 \begin{itemize}
   \item Any player loses their Town.
-  \item At least one Settlement remains unclaimed by the end of the \nth{7} Round. Time has run out! 
+  \item At least one Settlement remains unclaimed by the end of the \nth{7} Round. Time has run out!
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
