--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -43,9 +43,9 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 Place Far (II--III) Map Tiles with Settlements that match your Faction's Towns. Mark these with a colored Cube (see example).
 
 \begin{itemize}
-  \item $P$ × Starting (I) Map Tile.
-  \item $P$ × Far (II--III) Map Tile with Settlement of same Faction as players Towns.
-  \item 2$P$ × Far (II--III) Map Tile - must not contain Tiles with Settlements.
+  \item P × Starting (I) Map Tile
+  \item P × Far (II--III) Map Tile with the Settlement Field of the same Faction as player's Town
+  \item 2P × Far (II--III) Map Tile without the Settlement Field
 \end{itemize}
 
 \textit{Optional: You can distribute random pieces and covered pieces on the map so that they match your Faction's basic terrain.}
