--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -72,11 +72,11 @@ Conquer all Settlements.
     \textbf{\nth{1} Round:}
     \begin{itemize}
       \item At start of the Round, each player show up the \textit{nemesis map Tiles} (Far (II--III) Map Tile with Settlement of same Faction as players Towns). This Tile you can reveal freely.
-    \end{itemize}
-    \textbf{\nth{2} Round:}
-    \begin{itemize}
-      \item  First wave of enemy clan armies attacks the towns. (see below)
-      \item  Each player who defended his own town, during this Round can hire secondary Hero for 5 \svg{gold}, but you still have to use the population token.
+\end{itemize}
+\textbf{\nth{2} Round:}
+\begin{itemize}
+  \item The first wave of Enemy Clan armies attacks all Towns (see section below).
+  \item Each player who successfully defended their Town may hire a Secondary Hero for 5 \svg{gold} during this Round. This still requires spending a Population Token.
     \end{itemize}
     \textbf{\nth{3} Round:}
     \begin{itemize}
