--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -69,9 +69,9 @@ Conquer all Settlements.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
-    \textbf{\nth{1} Round:}
-    \begin{itemize}
-      \item At start of the Round, each player show up the \textit{nemesis map Tiles} (Far (II--III) Map Tile with Settlement of same Faction as players Towns). This Tile you can reveal freely.
+\textbf{\nth{1} Round:}
+\begin{itemize}
+  \item At the start of the Round, all players reveal their \textit{Nemesis Map Tiles} (Far (II--III) Map Tiles containing Settlements that match their Town's home terrain). These Tiles may be revealed without any cost.
 \end{itemize}
 \textbf{\nth{2} Round:}
 \begin{itemize}
