--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -81,11 +81,11 @@ Conquer all Settlements.
     \textbf{\nth{3} Round:}
     \begin{itemize}
       \item At start of the Round, each player shows up one Tile (Far (II--III) Map Tile. This Tile you can reveal freely. (Not matter if Tile is from pool or map template.)
-    \end{itemize}
-    \textbf{\nth{4} Round:}
-    \begin{itemize}
-      \item Second wave of enemy clan armies attacks the towns. (see below)
-      \item Each player who defended his own town, search (3) the \textit{Artifact Deck}.
+\end{itemize}
+\textbf{\nth{4} Round:}
+\begin{itemize}
+  \item The second wave of Enemy Clan armies attacks all Towns (see section below).
+  \item Each player who successfully defended their Town may Search (3) the \textit{Artifact Deck}.
      \end{itemize}
     \textbf{\nth{6} Round:}
     \begin{itemize}
