--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -86,11 +86,11 @@ Conquer all Settlements.
 \begin{itemize}
   \item The second wave of Enemy Clan armies attacks all Towns (see section below).
   \item Each player who successfully defended their Town may Search (3) the \textit{Artifact Deck}.
-     \end{itemize}
-    \textbf{\nth{6} Round:}
-    \begin{itemize}
-      \item Third wave of enemy clan armies attacks the towns. (see below)
-      \item Each player who defended his own town, search (3) the \textit{Artifact Deck}.
+\end{itemize}
+\textbf{\nth{6} Round:}
+\begin{itemize}
+  \item The third wave of Enemy Clan armies attacks all Towns (see section below).
+  \item Each player who successfully defended their Town may Search (3) the \textit{Artifact Deck}.
     \end{itemize}
     \textbf{\nth{7} Round:}
     \begin{itemize}
