--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -91,11 +91,11 @@ Conquer all Settlements.
 \begin{itemize}
   \item The third wave of Enemy Clan armies attacks all Towns (see section below).
   \item Each player who successfully defended their Town may Search (3) the \textit{Artifact Deck}.
-    \end{itemize}
-    \textbf{\nth{7} Round:}
-    \begin{itemize}
-      \item During this Round, Players can discard and draw Cards at the start of their turn twice rather than once.
-    \end{itemize}
+\end{itemize}
+\textbf{\nth{7} Round:}
+\begin{itemize}
+  \item During this Round, each player may perform the discard and draw action twice at the start of their turn, instead of the usual once.
+\end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 
