--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -35,7 +35,7 @@ This Scenario is played over 7 Rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling.
 
-\textbf{Map Tile Pool:} Take $P$ × random Far (II–-III) Map Tiles to form a shared pool, where $P$ equals the number of players. None of these Tiles may contain a Settlement.
+\textbf{Map Tile Pool:} Take $P$ × random \mbox{Far (II--III)} Map Tiles to form a shared pool, where $P$ equals the number of players. None of these Tiles may contain a Settlement.
 
 \subsection*{\MakeUppercase{Map Setup}}
 
