--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -35,20 +35,20 @@ This Scenario is played over 7 Rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling.
 
-\textbf{Map Tile Pool:} Take $P$ × random \mbox{Far (II--III)} Map Tiles to form a shared pool, where $P$ equals the number of players. None of these Tiles may contain a Settlement.
-
 \subsection*{\MakeUppercase{Map Setup}}
 
 Take the following Map Tiles and arrange them as shown in the Scenario map layout.
-Place Far (II--III) Map Tiles with Settlements that match your Faction's Towns. Mark these with a colored Cube (see example).
 
 \begin{itemize}
   \item P × Starting (I) Map Tile
-  \item P × Far (II--III) Map Tile with the Settlement Field of the same Faction as player's Town
-  \item 2P × Far (II--III) Map Tile without the Settlement Field
+  \item P × Far (II--III) Map Tile with the Settlement Field of the same terrain as player's Town.
+  \item 3P × Far (II--III) Map Tile without the Settlement Field. Each player takes three Map Tiles of their Faction's terrain with different mines. Each player place two of them on the game board so that they correspond with the map template and are linked together. Each player keeps the last tile for personal exploration.
 \end{itemize}
 
-\textit{Optional: You can distribute random pieces and covered pieces on the map so that they match your Faction's basic terrain.}
+Place Far (II--III) Map Tiles with Settlements that match your Faction's terrain, ensuring they align with the positions on the map represented by colored cubes. Each pair of same-colored cubes represents a Map Tile (I) and its corresponding Far (II--III) Map Tile with a Settlement.
+Each player place
+
+\textit{Optional: If you want to spice up the game and deepen the cooperation between players, you can take all Far (II--III) Map Tile without the Settlement Field and place them on map randomly. Create a shared pool for discovery from the remaining Tiles.}
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
 
