--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -77,10 +77,10 @@ Conquer all Settlements.
 \begin{itemize}
   \item The first wave of Enemy Clan armies attacks all Towns (see section below).
   \item Each player who successfully defended their Town may hire a Secondary Hero for 5 \svg{gold} during this Round. This still requires spending a Population Token.
-    \end{itemize}
-    \textbf{\nth{3} Round:}
-    \begin{itemize}
-      \item At start of the Round, each player shows up one Tile (Far (II--III) Map Tile. This Tile you can reveal freely. (Not matter if Tile is from pool or map template.)
+\end{itemize}
+\textbf{\nth{3} Round:}
+\begin{itemize}
+  \item At the start of the Round, each player discovers one Far (II--III) Map Tile. This Tile may be revealed at no cost, whether drawn from the shared pool or taken from the Map.
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
