--- a/draft-scenarios/coops/close_to_enemies.tex
+++ b/draft-scenarios/coops/close_to_enemies.tex
@@ -42,13 +42,13 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \begin{itemize}
   \item P × Starting (I) Map Tile
   \item P × Far (II--III) Map Tile with the Settlement Field of the same terrain as player's Town.
-  \item 3P × Far (II--III) Map Tile without the Settlement Field. Each player takes three Map Tiles of their Faction's terrain with different mines. Each player place two of them on the game board so that they correspond with the map template and are linked together. Each player keeps the last Tile for personal exploration.
+  \item 3P × Far (II--III) Map Tile without the Settlement Field. Each player takes three Map Tiles of their Faction's terrain with gold Mine, crystal Mine and one with anything. Each player shuffle their three Map Tiles and place two of them on the game board so that they correspond with the map template and are linked together. Each player keeps the last Tile for personal exploration.
 \end{itemize}
 
 Place Far (II--III) Map Tiles with Settlements that match your Faction's terrain, ensuring they align with the positions on the map represented by colored Cubes. Each pair of same-colored Cubes represents a Map Tile (I) and its corresponding Far (II--III) Map Tile with a Settlement.
 Each player place
 
-\textit{Optional: If you want to spice up the game and deepen the cooperation between players, you can take all Far (II--III) Map Tile without the Settlement Field and place them on map randomly. Create a shared pool for discovery from the remaining Tiles.}
+\textit{Optional: If you want to spice up the game and deepen the cooperation between players, you can take all Far (II--III) Map Tile without the Settlement Field shuffle them and place them on map randomly lead by map-template. After that, create a shared pool for discovery from the remaining Tiles.}
 
 \subsection*{\MakeUppercase{AI Hero Setup}}
 
@@ -80,7 +80,7 @@ Conquer all Settlements.
 \end{itemize}
 \textbf{\nth{3} Round:}
 \begin{itemize}
-  \item At the start of the Round, each player discovers one Far (II--III) Map Tile. This Tile may be revealed at no cost, whether drawn from the shared pool or taken from the Map.
+  \item At the start of the Round, each player discovers one Far (II--III) Map Tile. This Tile may be revealed at no cost, whether drawn from the pool or taken from the Map.
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
