[PL] Translation of two knights' defense + typography fixes

--- a/campaigns/castle_greek_gift.tex
+++ b/campaigns/castle_greek_gift.tex
@@ -39,7 +39,7 @@ This Scenario plays out over 8 Rounds.
 
 \textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Few Dread Knights, a Few Ghost Dragons
 
-\textbf{Enemy Deck:} 4 x Might Cards
+\textbf{Enemy Deck:} 4 × Might Cards
 
 \textbf{Special:} Place the Cloak of the Undead King IV and VI Cards aside
 
@@ -49,17 +49,17 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \textbf{1 × Starting (I) Map Tile}
 \begin{itemize}
-    \item 1 x Castle (S3)
+    \item 1 × Castle (S3)
 \end{itemize}
 
 \textbf{3 × Far (II--III) Map Tile}
 \begin{itemize}
-    \item 3 x Castle (F3, F6, F9)
+    \item 3 × Castle (F3, F6, F9)
 \end{itemize}
 
 \textbf{2 × Near (IV--V) Map Tile}
 \begin{itemize}
-    \item 2 x Castle (N3, N6)
+    \item 2 × Castle (N3, N6)
 \end{itemize}
 
 \subsection*{\MakeUppercase{Heroes placement}}
