--- a/campaigns/castle_sicilian_dragon.tex
+++ b/campaigns/castle_sicilian_dragon.tex
@@ -36,13 +36,13 @@ This Scenario plays out over 11 Rounds.
 
 \textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Pack of Liches, a Few Dread Knights, a Few Ghost Dragons
 
-\textbf{Enemy Deck:} 3 x Might Cards, 3 x Magic Cards, 1 x Skill Card
+\textbf{Enemy Deck:} 3 × Might Cards, 3 × Magic Cards, 1 × Skill Card
 
-\textbf{Enemy Spells:} 2 x Lightning Bolt, 1 x Curse
+\textbf{Enemy Spells:} 2 × Lightning Bolt, 1 × Curse
 
 \textbf{Enemy Skills:} Cloak of the Undead King IV and VI, the enemy will play whichever it can
 
-\textbf{Neutral Enemy Deck:} 4 x Might Cards
+\textbf{Neutral Enemy Deck:} 4 × Might Cards
 
 \subsection*{\MakeUppercase{Map setup}}
 
@@ -50,18 +50,18 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \textbf{1 × Starting (I) Map Tile}
 \begin{itemize}
-    \item 1 x Necropolis (S1)
+    \item 1 × Necropolis (S1)
 \end{itemize}
 
 \textbf{3 × Far (II--III) Map Tile}
 \begin{itemize}
-    \item 3 x random Tiles from Necropolis or Dungeon (F1, F2, F4, F5, F7, F8)
+    \item 3 × random Tiles from Necropolis or Dungeon (F1, F2, F4, F5, F7, F8)
 \end{itemize}
 
 \textbf{4 × Near (IV--V) Map Tile}
 \begin{itemize}
-    \item 2 x Necropolis (N1, N4)
-    \item 2 x Dungeon (N2, N5)
+    \item 2 × Necropolis (N1, N4)
+    \item 2 × Dungeon (N2, N5)
 \end{itemize}
 
 \textbf{1 × Center (VI--VII) Map Tile}
