--- a/translations/castle_greek_gift.tex/pl.po
+++ b/translations/castle_greek_gift.tex/pl.po
@@ -286,7 +286,7 @@ msgstr ""
 #: campaigns/castle_greek_gift.tex:43
 #, no-wrap
 msgid ""
-"\\textbf{Enemy Deck:} 4 x Might Cards\n"
+"\\textbf{Enemy Deck:} 4 × Might Cards\n"
 "\n"
 msgstr ""
 "\\textbf{Talia Wroga:} 4 × Karta Mocy\n"
@@ -319,7 +319,7 @@ msgstr ""
 msgid ""
 "\\textbf{1 × Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
-"    \\item 1 x Castle (S3)\n"
+"    \\item 1 × Castle (S3)\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -335,13 +335,13 @@ msgstr ""
 msgid ""
 "\\textbf{3 × Far (II--III) Map Tile}\n"
 "\\begin{itemize}\n"
-"    \\item 3 x Castle (F3, F6, F9)\n"
+"    \\item 3 × Castle (F3, F6, F9)\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{3 × Daleki (II--III) Kafelek Mapy}\n"
 "\\begin{itemize}\n"
-"    \\item 3 x Zamek (F3, F6, F9)\n"
+"    \\item 3 × Zamek (F3, F6, F9)\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -351,13 +351,13 @@ msgstr ""
 msgid ""
 "\\textbf{2 × Near (IV--V) Map Tile}\n"
 "\\begin{itemize}\n"
-"    \\item 2 x Castle (N3, N6)\n"
+"    \\item 2 × Castle (N3, N6)\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 "\\textbf{2 × Bliski (IV--V) Kafelek Mapy}\n"
 "\\begin{itemize}\n"
-"    \\item 2 x Zamek (N3, N6)\n"
+"    \\item 2 × Zamek (N3, N6)\n"
 "\\end{itemize}\n"
 "\n"
 
