--- a/translations/castle_two_knights_defense.tex/castle_two_knights_defense.tex.pot
+++ b/translations/castle_two_knights_defense.tex/castle_two_knights_defense.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-12-04 13:19+0100\n"
+"POT-Creation-Date: 2025-01-12 19:44+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -39,7 +39,7 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/sentinels.tex:42 campaigns/inferno_devilish_plan.tex:67
+#: coops/sentinels.tex:44 campaigns/inferno_devilish_plan.tex:67
 #: campaigns/castle_greek_gift.tex:49 campaigns/castle_sicilian_dragon.tex:50
 #: campaigns/castle_two_knights_defense.tex:47
 #, no-wrap
@@ -49,8 +49,8 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/sentinels.tex:57 coops/titans_stronghold.tex:61
-#: coops/emerald_island.tex:50 campaigns/inferno_devilish_plan.tex:98
+#: coops/sentinels.tex:52 coops/titans_stronghold.tex:59
+#: coops/emerald_island.tex:47 campaigns/inferno_devilish_plan.tex:98
 #: campaigns/inferno_steadwicks_fall.tex:111
 #: campaigns/inferno_deal_with_the_devil.tex:110
 #: campaigns/castle_greek_gift.tex:72 campaigns/castle_sicilian_dragon.tex:81
@@ -62,8 +62,8 @@ msgid ""
 msgstr ""
 
 #. type: multicols
-#: coops/sentinels.tex:67 coops/titans_stronghold.tex:69
-#: coops/emerald_island.tex:58 clash/bloody_grail.tex:64
+#: coops/sentinels.tex:62 coops/titans_stronghold.tex:71
+#: coops/emerald_island.tex:55 clash/bloody_grail.tex:64
 #: clash/force_of_will.tex:62 clash/the_hunt.tex:65
 #: clash/dragoncurse_castle.tex:57 campaigns/inferno_devilish_plan.tex:108
 #: campaigns/inferno_steadwicks_fall.tex:124
@@ -222,7 +222,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:39
 #, no-wrap
 msgid ""
-"\\textbf{Enemy Deck:} 3 x Might Cards, 3 x Magic Cards, 1 x Skill Card\n"
+"\\textbf{Enemy Deck:} 3 × Might Cards, 3 × Magic Cards, 1 × Skill Card\n"
 "\n"
 msgstr ""
 
@@ -231,7 +231,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:41
 #, no-wrap
 msgid ""
-"\\textbf{Enemy Spells:} 2 x Lightning Bolt, 1 x Curse\n"
+"\\textbf{Enemy Spells:} 2 × Lightning Bolt, 1 × Curse\n"
 "\n"
 msgstr ""
 
@@ -251,7 +251,7 @@ msgstr ""
 msgid ""
 "\\textbf{1 × Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
-"    \\item 1 x Necropolis (S1)\n"
+"    \\item 1 × Necropolis (S1)\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -263,8 +263,8 @@ msgstr ""
 msgid ""
 "\\textbf{4 × Near (IV--V) Map Tile}\n"
 "\\begin{itemize}\n"
-"    \\item 2 x Necropolis (N1, N4)\n"
-"    \\item 2 x Dungeon (N2, N5)\n"
+"    \\item 2 × Necropolis (N1, N4)\n"
+"    \\item 2 × Dungeon (N2, N5)\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -339,7 +339,7 @@ msgstr ""
 msgid ""
 "\\textbf{2 × Far (II--III) Map Tile}\n"
 "\\begin{itemize}\n"
-"    \\item 2 x random Tiles from Necropolis or Dungeon (F1, F2, F4, F5, F7, F8)\n"
+"    \\item 2 × random Tiles from Necropolis or Dungeon (F1, F2, F4, F5, F7, F8)\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
