--- a/campaigns/main.tex
+++ b/campaigns/main.tex
@@ -1,16 +1,16 @@
 \addscenariogroup{\campaignstitle}{\layout/campaigns.png}
 
 \clearpage
-%
-% \input{\campaignspath/inferno_devilish_plan.tex}
-%
-% \clearpage
-%
-% \input{\campaignspath/inferno_steadwicks_fall.tex}
-%
-% \clearpage
-%
-% \input{\campaignspath/inferno_deal_with_the_devil.tex}
+
+\input{\campaignspath/inferno_devilish_plan.tex}
+
+\clearpage
+
+\input{\campaignspath/inferno_steadwicks_fall.tex}
+
+\clearpage
+
+\input{\campaignspath/inferno_deal_with_the_devil.tex}
 
 \clearpage
 
